add hero html structure

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
 
 <head>
   <meta charset="UTF-8">
@@ -23,23 +23,32 @@
     </div>
     <nav class="nav">
       <ul class="nav__list">
-        <li class="nav__item"><a href="#" class="nav__link"></a>Home</li>
-        <li class="nav__item"><a href="#product" class="nav__link"></a>Product</li>
-        <li class="nav__item"><a href="#faq" class="nav__link"></a>Faq</li>
-        <li class="nav__item"><a href="#contact" class="nav__link"></a>Contact</li>
+        <li class="nav__item"><a href="#" class="nav__link link-active">Home</a></li>
+        <li class="nav__item"><a href="#product" class="nav__link">Product</a></li>
+        <li class="nav__item"><a href="#faq" class="nav__link">Faq</a></li>
+        <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
       </ul>
     </nav>
   </header>
 
   <nav class="mobile-nav">
-      <a href="#" class="mobile-nav__link">Home</a>
+      <a href="#" class="mobile-nav__link link-active">Home</a>
       <a href="#product" class="mobile-nav__link">Product</a>
       <a href="#faq" class="mobile-nav__link">Faq</a>
       <a href="#contact" class="mobile-nav__link">Contact</a>
   </nav>
 
   <main class="main">
-
+    <div class="hero">
+      <h2 class="hero__subtitle">Food app</h2>
+      <h1 class="hero__title">Why stay hungry when you can order from Bella Olonje</h1>
+      <p class="hero__description">Download the bella onoje's food app now on</p>
+      <div class="hero__buttons download-btn">
+        <a href="#" class="download-btn__btn download-btn__btn--playstore">Playstore</a>
+        <a href="#" class="download-btn__btn download-btn__btn--app-store">App store</a>
+      </div>
+      <div class="hero__images"></div>
+    </div>
   </main>
 
   <footer class="footer"></footer>
