add styles to hero section

--- a/src/index.html
+++ b/src/index.html
@@ -39,16 +39,22 @@
   </nav>
 
   <main class="main">
-    <div class="hero">
-      <h2 class="hero__subtitle">Food app</h2>
-      <h1 class="hero__title">Why stay hungry when you can order from Bella Olonje</h1>
-      <p class="hero__description">Download the bella onoje's food app now on</p>
-      <div class="hero__buttons download-btn">
-        <a href="#" class="download-btn__btn download-btn__btn--playstore">Playstore</a>
-        <a href="#" class="download-btn__btn download-btn__btn--app-store">App store</a>
+    <section class="hero">
+      <div class="hero__top">
+        <h4 class="hero__subtitle">Food app</h4>
+        <h1 class="hero__title">Why stay hungry when you can order from Bella Olonje</h1>
+        <p class="hero__description">Download the bella olonje's food app now on</p>
+        <div class="hero__buttons download-btn">
+          <a href="#" class="download-btn__btn download-btn__btn--playstore">Playstore</a>
+          <a href="#" class="download-btn__btn download-btn__btn--app-store">App store</a>
+        </div>
+        <div class="hero__images"></div>
       </div>
-      <div class="hero__images"></div>
-    </div>
+      <div class="hero__bottom"></div>
+    </section>
+    <section class="how-it-works">
+      <h3 class="how-it-works__title">How the app works</h3>
+    </section>
   </main>
 
   <footer class="footer"></footer>
