add responsiveness for header & hero; change menu

--- a/src/index.html
+++ b/src/index.html
@@ -45,8 +45,20 @@
         <h1 class="hero__title">Why stay hungry when you can order from Bella Olonje</h1>
         <p class="hero__description">Download the bella olonje's food app now on</p>
         <div class="hero__buttons download-btn">
-          <a href="#" class="download-btn__btn download-btn__btn--playstore">Playstore</a>
-          <a href="#" class="download-btn__btn download-btn__btn--app-store">App store</a>
+          <a
+            href="https://play.google.com/"
+            target="_blank"
+            class="download-btn__btn download-btn__btn--playstore"
+          >
+            Playstore
+          </a>
+          <a
+            href="https://www.apple.com/store"
+            target="_blank"
+            class="download-btn__btn download-btn__btn--app-store"
+          >
+            App store
+          </a>
         </div>
         <div class="hero__images"></div>
       </div>
@@ -111,14 +123,14 @@
         <img src="assets/images/icons/twitter.svg" alt="twitter link">
       </a>
       <a
-        href="www.facebook.com"
+        href="https://www.facebook.com"
         target="_blank"
         class="footer__link"
       >
         <img src="assets/images/icons/facebook.svg" alt="facebook link">
       </a>
       <a
-        href="www.linkedin.com"
+        href="https://www.linkedin.com"
         target="_blank"
         class="footer__link"
       >
