--- a/src/index.html
+++ b/src/index.html
@@ -68,9 +68,9 @@
       <h2 class="how-it-works__title">How the app works</h2>
       <div class="how-it-works__action action">
         <div class="action__content">
-          <h3 class="action__title center">Create an account</h3>
-          <p class="action__info center">Create/login to an existing account to get started</p>
-          <p class="action__hint center">An account is created with your email and a desired password</p>
+          <h3 class="action__title">Create an account</h3>
+          <p class="action__info">Create/login to an existing account to get started</p>
+          <p class="action__hint">An account is created with your email and a desired password</p>
         </div>
         <img
           src="assets/images/action-1.png"
@@ -80,9 +80,9 @@
       </div>
       <div class="how-it-works__action action">
         <div class="action__content">
-          <h3 class="action__title center">Explore while shopping</h3>
-          <p class="action__info center">Shop for your favorites meal as e dey hot.</p>
-          <p class="action__hint center">Shop for your favorite meals or drinks and enjoy while doing it.</p>
+          <h3 class="action__title">Explore while shopping</h3>
+          <p class="action__info">Shop for your favorites meal as e dey hot.</p>
+          <p class="action__hint">Shop for your favorite meals or drinks and enjoy while doing it.</p>
         </div>
         <img
           src="assets/images/action-2.png"
@@ -92,9 +92,9 @@
       </div>
       <div class="how-it-works__action action">
         <div class="action__content">
-          <h3 class="action__title center">Checkout</h3>
-          <p class="action__info center">When you done check out and get it delivered.</p>
-          <p class="action__hint center">When you done check out and get it delivered with ease.</p>
+          <h3 class="action__title">Checkout</h3>
+          <p class="action__info">When you done check out and get it delivered.</p>
+          <p class="action__hint">When you done check out and get it delivered with ease.</p>
         </div>
         <img
           src="assets/images/action-3.png"
@@ -104,8 +104,11 @@
       </div>
     </section>
     <section class="download">
-      <h2 class="download__title center">Download the app now.</h2>
-      <p class="download__text center">Most calendars are designed for teams.</p>
+      <h2 class="download__title">Download the app now.</h2>
+      <p class="download__text">
+        <span class="short-text">Most calendars are designed for teams.</span>
+        <span class="full-text">Available on your favorite store. Start your premium experience now</span>
+      </p>
       <div class="download__buttons">
         <a href="#" class="download__btn download__btn--buy">Buy now</a>
         <a href="#" class="download__btn download__btn--try">Try for free</a>
@@ -114,30 +117,40 @@
   </main>
 
   <footer class="footer">
-    <div class="footer__links">
-      <a
-        href="https://twitter.com"
-        target="_blank"
-        class="footer__link"
+    <div class="footer__content">
+      <img
+        src="./assets/images/bella-logo.png"
+        alt="Bella Olonje logo"
+        class="logo-img"
       >
-        <img src="assets/images/icons/twitter.svg" alt="twitter link">
-      </a>
-      <a
-        href="https://www.facebook.com"
-        target="_blank"
-        class="footer__link"
-      >
-        <img src="assets/images/icons/facebook.svg" alt="facebook link">
-      </a>
-      <a
-        href="https://www.linkedin.com"
-        target="_blank"
-        class="footer__link"
-      >
-        <img src="assets/images/icons/linkedIn.svg" alt="linkedIn link">
-      </a>
+      <div class="footer__links">
+        <a
+          href="https://twitter.com"
+          target="_blank"
+          class="footer__link"
+        >
+          <img src="assets/images/icons/twitter.svg" alt="twitter link">
+        </a>
+        <a
+          href="https://www.facebook.com"
+          target="_blank"
+          class="footer__link"
+        >
+          <img src="assets/images/icons/facebook.svg" alt="facebook link">
+        </a>
+        <a
+          href="https://www.linkedin.com"
+          target="_blank"
+          class="footer__link"
+        >
+          <img src="assets/images/icons/linkedIn.svg" alt="linkedIn link">
+        </a>
+      </div>
+      <p class="footer__text">
+        <span class="short-text">Just type what's on your mind</span>
+        <span class="full-text">Copyright 2020 Bella Olonjie.com</span>
+      </p>
     </div>
-    <p class="footer__text">Just type what's on your mind</p>
   </footer>
 </body>
 
