--- a/src/index.html
+++ b/src/index.html
@@ -148,7 +148,7 @@
       </div>
       <p class="footer__text">
         <span class="short-text">Just type what's on your mind</span>
-        <span class="full-text">Copyright 2020 Bella Olonjie.com</span>
+        <span class="full-text">Copyright 2020 Bella Olonje.com</span>
       </p>
     </div>
   </footer>
