--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="page">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
@@ -148,7 +148,7 @@
       </div>
       <p class="footer__text">
         <span class="short-text">Just type what's on your mind</span>
-        <span class="full-text">Copyright 2020 Bella Olonjie.com</span>
+        <span class="full-text">Copyright 2020 Bella Olonje.com</span>
       </p>
     </div>
   </footer>
