--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
           class="action__content"
           data-aos="fade-up"
           data-aos-delay="300"
+          data-aos-once="true"
         >
           <h3 class="action__title">Create an account</h3>
           <p class="action__info">Create/login to an existing account to get started</p>
@@ -83,6 +84,7 @@
           alt="Action 1"
           data-aos="fade-right"
           data-aos-duration="1000"
+          data-aos-once="true"
           class="action__img"
         >
       </div>
@@ -91,6 +93,7 @@
           class="action__content"
           data-aos="fade-up"
           data-aos-delay="300"
+          data-aos-once="true"
         >
           <h3 class="action__title">Explore while shopping</h3>
           <p class="action__info">Shop for your favorites meal as e dey hot.</p>
@@ -101,6 +104,7 @@
           alt="Action 2"
           data-aos="fade-left"
           data-aos-duration="1000"
+          data-aos-once="true"
           class="action__img"
         >
       </div>
@@ -109,6 +113,7 @@
           class="action__content"
           data-aos="fade-up"
           data-aos-delay="300"
+          data-aos-once="true"
         >
           <h3 class="action__title">Checkout</h3>
           <p class="action__info">When you done check out and get it delivered.</p>
@@ -119,17 +124,18 @@
           alt="Action 3"
           data-aos="fade-right"
           data-aos-duration="1000"
+          data-aos-once="true"
           class="action__img"
         >
       </div>
     </section>
-    <section class="download" data-aos="fade-up">
+    <section class="download" data-aos="fade-up" data-aos-once="true">
       <h2 class="download__title">Download the app now.</h2>
       <p class="download__text">
         <span class="short-text">Most calendars are designed for teams.</span>
         <span class="full-text">Available on your favorite store. Start your premium experience now</span>
       </p>
-      <div class="download__buttons" data-aos="zoom-out-down">
+      <div class="download__buttons" data-aos="zoom-out-down" data-aos-once="true">
         <a href="#" class="download__btn download__btn--buy">Buy now</a>
         <a href="#" class="download__btn download__btn--try">Try for free</a>
       </div>
